--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Apollo Audio Management Platform",
+  "short_name": "Stake Dragons",
+  "name": "Stake Dragons",
   "icons": [
     {
       "src": "logo.svg",
